--- a/djangoProject/firstApp/templates/home.html
+++ b/djangoProject/firstApp/templates/home.html
@@ -11,7 +11,7 @@
 <ul>
     {% for pet in pets %}
     <li>
-        <a href="{% url 'pet_detail' pet.id%"}>{{pet._name|capfirst}}</a>
+        <a href="{% url 'pet_detail' pet.id%"}>{{pet.name|capfirst}}</a>
     </li>
     {% endfor %}
 </ul>
