Links to pet_detail all working, pet_detail formatted (ugly)

--- a/djangoProject/firstApp/templates/base.html
+++ b/djangoProject/firstApp/templates/base.html
@@ -5,10 +5,11 @@
 </head>
 
 <body> 
-    <h1>My Pet Adoption Agency</h1>
+    <a tag="homelink" href="{% url 'home' %}"><h1>My Pet Adoption Agency</h1></a>
 
     {% block content %}
     {% endblock %}
+    
 </body>
 
 </html>
